2nd Upload of Files
Adding personalized LinkedIn and Behance Files on website.

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
 <nav>
     <ul>
-        <li><a href="https://www.behance.net"> My Work </a></li>
-        <li><a href="https:/linkedin.com/in/audrey-kong-7a9931211"
+        <li><a href="https://www.behance.net/audreykong"> My Work </a></li>
+        <li><a href="https://www.linkedin.com/in/audrey-kong-7a9931211/"
     target="_blank"> LinkedIn</a></li>
         <li><a href="mailto:aykong@calpoly.edu"> Email Me </a></li>
     </ul>
