--- a/index.html
+++ b/index.html
@@ -2,7 +2,24 @@
 <html>
 
 <head>
+    <style type="text/css">
+        </style>
+    <style>
+        body {
+            animation: fadeInAnimation ease 3s;
+            animation-iteration-count: .5;
+            animation-fill-mode: fowards;
+        }
+        @keyframes fadeInAnimation {
+            0% {
+                opacity: 0;
+            }
+            100% {
+                opacity: 1;
+            }
 
+        }
+    </style>
     <meta charset=”UTF-8”>
    
     <!-- THE TITLE WILL APPEAR IN THE BROWSER WINDOW OR TAB -->
